fixed spacing in mobile view of services section

--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -126,8 +126,8 @@
 @media(max-width:768px){
     .services{
         align-items: start;
-        gap: 70px;
-        margin: 20px 70px;
+        gap:  70px;
+        margin: 20px 50px;
     }
     .services-title h1{
         padding: 0;
